Fix hovered uncolored links in dark mode

--- a/static/dark.css
+++ b/static/dark.css
@@ -14,6 +14,13 @@
         color: #43a2f2;
     }
 
+    .uncolored-links a:focus,
+    a.uncolored-links:focus,
+    .uncolored-links a:hover,
+    a.uncolored-links:hover {
+        color: inherit;
+    }
+
     blockquote {
         border-left: 5px solid #444;
     }
